# hypertrie

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  LICENSE-MIT  README.md  clang10_conan_profile  conanfile.py  packaging-instructions
cmake/: ClangTidy.cmake  conan_cmake.cmake  (+3 more)
libs/atomic_queue/: CMakeLists.txt
libs/einsum/: CMakeLists.txt
libs/einsum/src/Dice/: einsum.hpp
libs/einsum/src/Dice/einsum/internal/: CardinalityEstimation.hpp  CartesianOperator.hpp  Context.hpp  CountOperator.hpp  Einsum.hpp  Entry.hpp  EntryGeneratorOperator.hpp  JoinOperator.hpp  Operator.hpp  OperatorMemberTypealiases.hpp  RawSubscript.hpp  ResolveOperator.hpp  Subscript.hpp
libs/einsum/src/Dice/einsum/internal/util/: UndirectedGraph.hpp
libs/einsum/src/dice/: einsum.hpp
libs/einsum/src/dice/einsum/: Commons.hpp  EinsumOperator.hpp  Subscript.hpp  TimeoutException.hpp
libs/einsum/src/dice/einsum/internal/: CardinalityEstimation.hpp  Context.hpp  RawSubscript.hpp
libs/einsum/src/dice/einsum/internal/operators/: CartesianOperator.hpp  CountOperator.hpp  EntryGeneratorOperator.hpp  JoinOperator.hpp  Operator.hpp  Operator_predeclare.hpp  ResolveOperator.hpp
libs/einsum/src/dice/einsum/internal/util/: UndirectedGraph.hpp  generator.hpp
libs/fmt/: CMakeLists.txt
libs/fmt/src/Dice/hypertrie/: fmt_Key.hpp
libs/fmt/src/Dice/hypertrie/internal/: fmt_Hypertrie_trait.hpp
libs/fmt/src/Dice/hypertrie/internal/container/: fmt_AllContainer.hpp  fmt_StdMap.hpp  fmt_StdSet.hpp  fmt_TslMap.hpp  fmt_TslSet.hpp
libs/fmt/src/Dice/hypertrie/internal/raw/: fmt_Hypertrie_core_trait.hpp  fmt_RawDiagonalPositions.hpp  fmt_RawKey.hpp
libs/fmt/src/Dice/hypertrie/internal/util/: fmt_utils.hpp
libs/hypertrie/: CMakeLists.txt
libs/hypertrie-core/: CMakeLists.txt
libs/hypertrie-core-fmt/: CMakeLists.txt
libs/hypertrie-core-fmt/src/Dice/hypertrie/internal/: Hypertrie_traits_tostring.hpp
libs/hypertrie/src/Dice/: hypertrie.hpp
libs/hypertrie/src/Dice/hypertrie/: BulkInserter.hpp  BulkInserter_predeclare.hpp  HashDiagonal.hpp  HashJoin.hpp  Hypertrie.hpp  HypertrieContext.hpp  HypertrieContextConfig.hpp  Hypertrie_predeclare.hpp  Iterator.hpp
libs/hypertrie/src/dice/: hypertrie.hpp
libs/hypertrie/src/dice/hypertrie/: BulkInserter.hpp  BulkInserter_predeclare.hpp  BulkUpdater.hpp  BulkUpdater_predeclare.hpp  ByteAllocator.hpp  HashDiagonal.hpp  HashJoin.hpp  Hypertrie.hpp  HypertrieContext.hpp  HypertrieContextConfig.hpp  Hypertrie_default_traits.hpp  Hypertrie_predeclare.hpp  Hypertrie_trait.hpp  Hypertrie_version.hpp  Iterator.hpp  Key.hpp  hypertrie_allocator_trait.hpp
libs/query/: CMakeLists.txt
libs/query/src/dice/: query.hpp
libs/query/src/dice/query/: Commons.hpp  Evaluation.hpp  OperandDependencyGraph.hpp  Query.hpp
libs/query/src/dice/query/operators/: CardinalityEstimation.hpp  CartesianOperator.hpp  CountOperator.hpp  EntryGeneratorOperator.hpp  JoinOperator.hpp  LeftJoinOperator.hpp  Operator.hpp  Operator_predeclare.hpp  ResolveOperator.hpp  UnionOperator.hpp
libs/query/src/dice/query/util/: generator.hpp
test_cmake_install/: CMakeLists.txt  conanfile.txt  example.cpp
tests/: CMakeLists.txt  TestBoolHypertrie.cpp  TestCompressedBHT.cpp  TestCompressedBoolHypertrie.cpp  TestCompressedRawDiagonal.cpp  TestDiceHash.cpp  TestDirectedGraph.cpp  TestEinsum.cpp  TestHashDiagonal.cpp  TestHashJoin.cpp  TestJoinCombination.cpp  TestLeftJoin.cpp  TestNewSubscript.cpp  TestRawBoolhypertrie.cpp  TestRawDiagonal.cpp  TestRobinHoodHash.cpp  Tests.cpp  metall_mute_warnings.hpp
tests/allocator_awareness/: HypertrieTraits_with_allocators.hpp  OffsetAllocator.hpp  TestAllocatorAwareness.cpp  TestIntegralTemplatedTupleAlloc.hpp  TestNode.hpp  TestNodeStorage.hpp
tests/basline_hypertrie/: BaslineHypertrieTests.cpp  TestDiagonal.hpp  TestHypertrie.hpp  TestIterator.hpp  TestTensor.hpp
tests/core/node/: ValidationRawHashDiagonal.hpp  ValidationRawNodeContext.hpp  ValidationRawNodeContext_slice.hpp  builds_NodeStorage.cpp  tests_AllocateNode.cpp  tests_FullNode.cpp  tests_Identifier.cpp  tests_RawHashDiagonal.cpp  tests_RawHypertrieContext.cpp  tests_RawHypertrieContext_randomized.cpp  tests_RawHypertrieContext_randomized_large_data.cpp  tests_RawHypertrieContext_randomized_removal.cpp  tests_RawHypertrieContext_removal.cpp  tests_RawHypertrieContext_slice.cpp  tests_RawHypertrieContext_systematic.cpp  tests_RawHypertrieContext_systematic_metall.cpp  tests_RawIterator.cpp  tests_SingleEntryNode.cpp
tests/diagonal/: DiagonalTestData.hpp
tests/einsum/: EinsumTestData.hpp  einsum2map.hpp  minimal_example.cpp  tests_Einsum.cpp  tests_Einsum_metall.cpp
tests/einsum/test_data/: Einsum.hpp  Operand.hpp
tests/fmt/: tests_fmt_definitions.cpp
tests/hypertrie/: tests_Diagonal.cpp  tests_HypertrieContext.cpp  tests_HypertrieContext_metall.cpp  tests_HypertrieContext_systematic_metall.cpp  tests_HypertrieIterator.cpp
tests/libhypertrie-fmt/: CMakeLists.txt
tests/libhypertrie-fmt/src/dice/hypertrie/: fmt_Key.hpp
tests/libhypertrie-fmt/src/dice/hypertrie/internal/: Hypertrie_traits_tostring.hpp  fmt_Hypertrie_trait.hpp
tests/libhypertrie-test-utils/: CMakeLists.txt
tests/libhypertrie-test-utils/utils/: AssetGenerator.hpp  DumpRawContext.hpp  EntrySetGenerator.hpp  Node_test_configs.hpp  Product.hpp  RawEntryGenerator.hpp  TorchTensorAccessor.hpp  ValidationRawHashDiagonal.hpp  ValidationRawNodeContext.hpp  ValidationRawNodeContext_slice.hpp
tests/node_based/: NodeBasedTests.cpp  NodeBasedTests.hpp  TestHypertrie.hpp  TestHypertrieContext.hpp  TestNode.hpp  TestNodeContainer.hpp  TestNodeContext.hpp  TestNodeContextRandomized.hpp  TestRawDiagonal.cpp  TestRawDiagonal.hpp  TestRawIterator.hpp  TestSlicing.hpp  TestTaggedNodeHash.hpp  TestTensor.hpp
tests/query/: tests_OperandDependencyGraph.cpp  tests_Query.cpp
tests/slice/: TestSlice.hpp
tests/utils/: AssetGenerator.hpp  DiagonalTestDataGenerator.hpp  EntrySetGenerator.hpp  GenerateTriples.hpp  MemoryUsage.hpp  NameOfType.hpp  Node_test_configs.hpp  Product.hpp  RawEntryGenerator.hpp  TorchHelper.hpp
(+300 files in other folders)
